changes for checkbox alignment issue on focus

--- a/src/client/app/flogo.apps.details/components/export-flow.component.less
+++ b/src/client/app/flogo.apps.details/components/export-flow.component.less
@@ -127,6 +127,12 @@
   font-size: 11px;
   color: #676a6d;
 }
+
+.flogo-checkbox input[type="checkbox"]:focus {
+  outline: 0px;
+  outline-offset: 0px;
+}
+
 .flogo-checkbox input[type="checkbox"]:checked + label::after {
   font-family: 'FontAwesome';
   content: "\f00c";
